--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@300;700;900&display=swap");
+
 #root {
   padding: 2rem;
   text-align: center;
@@ -9,55 +11,11 @@
   );
 }
 
-/* .sweet-title {
-  order: 2;
-  color: #fde9ff;
-  font-weight: 900;
-  text-transform: uppercase;
-  font-size: clamp(3rem, 10vw, 6rem);
-  line-height: 0.75em;
-  text-align: center;
-  text-shadow: 3px 1px 1px #4af7ff, 2px 2px 1px #165bfb, 4px 2px 1px #4af7ff,
-    3px 3px 1px #165bfb, 5px 3px 1px #4af7ff, 4px 4px 1px #165bfb,
-    6px 4px 1px #4af7ff, 5px 5px 1px #165bfb, 7px 5px 1px #4af7ff,
-    6px 6px 1px #165bfb, 8px 6px 1px #4af7ff, 7px 7px 1px #165bfb,
-    9px 7px 1px #4af7ff;
-
-  span {
-    display: block;
-    position: relative;
-
-    &:before {
-      content: attr(data-text);
-      position: absolute;
-      text-shadow: 2px 2px 1px #e94aa1, -1px -1px 1px #c736f9,
-        -2px 2px 1px #e94aa1, 1px -1px 1px #f736f9;
-      z-index: 1;
-    }
-
-    &:nth-child(1) {
-      padding-right: 2.25rem;
-    }
-
-    &:nth-child(2) {
-      padding-left: 2.25rem;
-    }
-  }
-} */
-
-
 body {
   background: #000405;
-  font-family: 'Work Sans', sans-serif;
-  font-weight: 900;
+  font-family: "Work Sans", sans-serif;
 }
 
-p {
-  font-size: 5vw;
-  /* text-transform: uppercase; */
-  text-align: center;
-  line-height: 1;
-}
 
 .fancy {
   position: relative;
